# MATS-L1-processing

./: .gitignore  .gitmodules  CITATION.cff  CONTRIBUTING.md  CONTRIBUTORS.md  L1-processing.drawio  L1_calibrate.py  L1_calibration_functions.py  L1_functions.py  LindasCalibrationFunctions.py  MATS_L1.py  MATS_python_datachain.py  README.rst  example_compensate_bad_columns.py  example_desmear_true_image  generate_non_linear_table.py  get_temperature.py  imagereader.py  pyproject.toml  read_and_calibrate_all_files.py  read_and_calibrate_from_protocol.py  read_from_racdirectory.py  read_in_functions.py  run_calibration.py  run_non_linearity.py  setup.cfg  setup.py  show_predicted_image.py  test_read_all_images.py
docs/: L1-processing.drawio  conf.py  index.rst  requirements.txt
l1b_lambda/: .dockerignore  Dockerfile  app.py  copy_source.sh  requirements.in  requirements.txt  tox.ini
misc/: MATS_python_datachain.py  imagereader.py  read_and_calibrate_from_protocol_old_racfiles.py  read_in_functions_old_racfiles.py
non-linearity/: non_linearity_simulation.py  non_linerity_simulation.ipynb  run_non_linearity.py
scripts/: calibration_data.toml  calibration_data_linda.toml  enqueue_level1b_sqs.py  generate_non_linear_table.py  make_calibration_table.py  plot_residuals.py  plot_tables.py  run_calibration.py  run_non_linearity.py  run_read_houseing.py
tests/: calibration_data_test.toml  conftest.py  test_calibration.py  test_database_generation.py  test_gridding.py  test_l1b.py  test_pointing.py  test_skeleton.py
to_be_removed/: example_compensate_bad_columns.py  forward_model2.py  forward_model_oldobjectoriented.py  jpeglib.py  read_darwin_rac.py  (+2 more)
(+42 files in other folders)
