[build-system]
# AVOID CHANGING REQUIRES: IT WILL BE UPDATED BY PYSCAFFOLD!
requires = ["uv_build>=0.11.23,<0.12"]
build-backend = "uv_build"

[project]
name = "mats_l1_processing"
description = "Package for L1 processing of MATS data"
readme = "README.rst"
license = "MIT"
license-files = ["LICENSE", "AUTHORS.rst"]
authors = [
	{ name = "Ole Martin Christensen", email = "olemartin.christensen@misu.su.se" },
]
requires-python = ">=3.11"
version = "0.1.0"
classifiers = [
	"Development Status :: 4 - Beta",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3.11",
]
dependencies = [
	"scipy",
	"numpy",
	"matplotlib",
	"tqdm",
	"pandas",
	"toml",
	"pwlf",
	"joblib",
	"pyarrow",
	"pytz",
]

[project.optional-dependencies]
testing = [
	"setuptools",
	"pytest",
	"pytest-cov",
]

[project.urls]
Documentation = "https://github.com/innosat-mats/MATS-L1-processing"
Repository = "https://github.com/innosat-mats/MATS-L1-processing"

[tool.uv.build-backend]
module-root = "src"
module-name = ["mats_l1_processing", "database_generation"]

[tool.uv]
default-groups = ["dev"]

[dependency-groups]
dev = [
	"build",
	"pytest",
	"pytest-cov",
	"ruff",
	"ty",
	"tox<4.27",
]

[tool.pytest.ini_options]
addopts = [
	# "--cov mats_l1_processing --cov-report term-missing",
	# "--verbose",
]
norecursedirs = ["dist", "build", ".tox"]
testpaths = ["tests"]
filterwarnings = [
	"ignore::DeprecationWarning:pandas",
]

[tool.ruff]
line-length = 88
exclude = [
	".tox",
	"build",
	"dist",
	".eggs",
	"docs/conf.py",
]

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]
